test/ddc-spec/error/01-ErrorExp/05-ImportCapNotEffect/Test.ds

-- ISSUE #408: No source locations for import and export errors.
module Test

import foreign c value
 derp : Read

where
